# uniliste

./: .dockerignore  README.md  docker-compose.yml
Docker/backend/: Dockerfile
Docker/frontend/: Dockerfile
backend/: Cargo.toml
backend/src/: import.rs  main.rs
backend/src/import/: resources.csv  secreatries.csv  students.csv  teachers.csv
frontend/: package.json  pnpm-lock.yaml
frontend/src/pages/: AboutPage.vue  CMPage.vue  CoursPage.vue  GroupPage.vue  RessourcePage.vue  temp.vue
frontend/src/pages/professor/: Callsheet.vue  FirstPage.vue  StaffList.vue  StudentList.vue
frontend/src/pages/secretary/: FirstPage.vue  ImportGroupPage.vue  ImportProfessorPage.vue  ImportRessourcesPage.vue  ImportStudentPage.vue  JustificationPage.vue  YearPage.vue
frontend/src/router/: index.js
scripts/: init.js
uniliste/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
uniliste/src/: App.vue  CoursPage.vue  FirstPage.vue  GroupPage.vue  LoginPage.vue  RessourcePage.vue  main.js  temp.vue
uniliste/src-tauri/: Cargo.toml  tauri.conf.json
uniliste/src-tauri/src/: main.rs
uniliste/src/professor/: FirstPage.vue
uniliste/src/router/: index.js
uniliste/src/secretary/: FirstPage.vue  ImportGroupPage.vue  ImportProfessorPage.vue  ImportRessourcesPage.vue  ImportStudent.vue  ImportStudentPage.vue  JustificationPage.vue  YearPage.vue
